--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: sans-serif;
 }
 
-.pets {
+.pet-container {
     display: flex;
     max-width: 1000px;
     margin: 0 auto;
